# orm-benchmarks

./: .gitignore  Makefile  README.md  README.rst  generate_charts.py  generate_tables.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml
benchmarks/: bench.sh  db.sh  present.py
benchmarks/django/: bench.sh  manage-simple.py
benchmarks/ormar/: bench.py  models.py  test_a.py  test_b.py  test_c.py  test_d.py  test_e.py  test_f.py  test_g.py  test_h.py  test_i.py  test_j.py  test_k.py
benchmarks/peewee/: models.py  test_a.py  test_b.py  test_c.py  test_d.py  test_e.py  test_f.py  test_g.py  test_h.py  test_i.py  test_j.py  test_k.py
benchmarks/piccolo/: bench.py  bench.sh  models.py  test_a.py  test_b.py  test_c.py  test_d.py  test_e.py  test_f.py  test_g.py  test_h.py  test_i.py  test_j.py  test_k.py
benchmarks/pony/: models.py  test_a.py  test_b.py  test_d.py  test_e.py  test_f.py  test_g.py  test_h.py  test_i.py  test_j.py  test_k.py
benchmarks/sqlalchemy/: models.py  test_a.py  test_b.py  test_c.py  test_d.py  test_e.py  test_f.py  test_g.py  test_h.py  test_i.py  test_j.py  test_k.py
benchmarks/sqlalchemy_async/: bench.py  bench.sh  models.py  test_a.py  test_b.py  test_c.py  test_d.py  test_e.py  test_f.py  test_g.py  test_h.py  test_i.py  test_j.py  test_k.py
benchmarks/sqlmodel/: bench.sh  models.py  test_a.py  test_b.py  test_c.py  test_d.py  test_e.py  test_f.py  test_g.py  test_h.py  test_i.py  test_j.py  test_k.py
benchmarks/sqlobject/: bench.sh  models.py  test_a.py  test_b.py  test_d.py  test_e.py  test_f.py  test_i.py  test_j.py  test_k.py
benchmarks/tortoise/: bench.py  bench.sh  models.py  set_up.py  test_a.py  test_b.py  test_c.py  test_d.py  test_e.py  test_f.py  test_g.py  test_h.py  test_i.py  test_j.py  test_k.py
src/: bench.sh  bench_all.sh  present.py  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
src/django/: bench.sh  manage-simple.py
src/peewee/: bench.sh  models.py  set_up.py  test_a.py  test_b.py  test_c.py  test_d.py  test_e.py  test_f.py  test_g.py  test_h.py  test_i.py  test_j.py  test_k.py
src/pony/: bench.sh  models.py  test_a.py  test_b.py  test_d.py  test_e.py  test_f.py  test_g.py  test_h.py  test_i.py  test_j.py  test_k.py
src/sqlalchemy/: bench.sh  models.py  test_a.py  (+10 more)
(+54 files in other folders)
