[tool.poetry]
name = "orm-benchmarks"
version = "0.1.0"
description = "Benchmarks for ORMs"
authors = ["long2ice <long2ice@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# ORM's
django = "*"
sqlalchemy = "*"
peewee = "*"
pony = "*"
sqlobject = "*"
tortoise-orm = {path = "/Users/abondar/PycharmProjects/tortoise-orm", develop = true}
piccolo = "*"
ormar = "*"
databases = {extras = ["aiosqlite"], version = "*"}
aiosqlite = "*"
# DB drivers
asyncpg = "*"
asyncmy = "*"
mysqlclient = "*"
psycopg2 = "*"
# Recommended accelerators
uvloop = "*"
python-rapidjson = "*"

[tool.poetry.dev-dependencies]
# Testing tools
vmprof = "*"
py-spy = "*"
tox = "*"
flake8 = "*"
isort = "*"
black = "*"
bandit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
