[project]
name = "orm-benchmarks"
version = "0.1.0"
description = "Benchmarks for ORMs"
requires-python = ">=3.10"

dependencies = [
    # ORM's
    "django",
    "sqlalchemy",
    "peewee",
    "sqlobject",
    "tortoise-orm",
    "piccolo",
    "ormar",
    "sqlmodel",
    "databases[aiosqlite]",
    "aiosqlite",
    # DB drivers
    "asyncpg",
    "asyncmy",
    "psycopg2-binary",
    # Recommended accelerators
    "uvloop",
    "python-rapidjson",
    "greenlet",
    # Charts
    "matplotlib",
    "numpy",
]

[tool.uv.sources]
tortoise-orm = { path = "/Users/abondar/PycharmProjects/tortoise-orm", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
